deployment/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-service
  ports:
  - port: 80
    targetPort: 80
    NodePort: 32080
  type: NodePort
